z-index fix

--- a/client/src/css/chat.css
+++ b/client/src/css/chat.css
@@ -25,6 +25,7 @@
     box-shadow: 2px 2px 1px grey;
     word-wrap: break-word;
     position: relative;
+    background-color: white;
 }
 
 
